--- a/Lab_2_Assignment_WI24.ipynb
+++ b/Lab_2_Assignment_WI24.ipynb
@@ -3441,15 +3441,523 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 156,
       "metadata": {
         "scrolled": true,
-        "id": "XwAGQw98SvET"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XwAGQw98SvET",
+        "outputId": "af191c9e-6920-4083-c6e2-31c1ac78b9ed"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n",
+            "b\n",
+            "c\n"
+          ]
+        }
+      ],
       "source": [
-        "# Type code below"
+        "# Type code below\n",
+        "# generators to make iteraable\n",
+        "some_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+        "for key in some_dict:\n",
+        "    print(key)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict_iterator = iter(some_dict)\n",
+        "dict_iterator"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SEjpYi-06mEm",
+        "outputId": "928ca3b5-9934-4c50-e9e6-3367343716a3"
+      },
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<dict_keyiterator at 0x7cf152e51210>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 157
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(dict_iterator)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a0v1NPRG6qw5",
+        "outputId": "ae595613-a352-46d2-d958-8f2df7a8e4d8"
+      },
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'c']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 158
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# more generator\n",
+        "def squares(n=10):\n",
+        "    print(f\"Generating squares from 1 to {n ** 2}\")\n",
+        "    for i in range(1, n + 1):\n",
+        "        yield i ** 2"
+      ],
+      "metadata": {
+        "id": "9go9HxvG6yeC"
+      },
+      "execution_count": 159,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "gen = squares()\n",
+        "gen"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_IdnDgNO65AM",
+        "outputId": "3e71bbda-d4f5-4d4a-9f33-06b82551550d"
+      },
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<generator object squares at 0x7cf152e79700>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 160
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# before was the set up now is the work\n",
+        "for x in gen:\n",
+        "    print(x, end=\" \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KF22BjmL67ML",
+        "outputId": "83b5c0dc-3d31-434c-bbbf-f21aa926ca41"
+      },
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Generating squares from 1 to 100\n",
+            "1 4 9 16 25 36 49 64 81 100 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# generator expressions this is a short had for a longer function for loop\n",
+        "gen = (x ** 2 for x in range(100))\n",
+        "gen"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Oe2cBXXP7Dcs",
+        "outputId": "8727641c-eea5-488f-e832-5c9bbc8f53b1"
+      },
+      "execution_count": 162,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<generator object <genexpr> at 0x7cf153ae3ed0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 162
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# generator instead of list comprehensions\n",
+        "sum(x ** 2 for x in range(100))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ariGE9427Swz",
+        "outputId": "1127fa46-9aa5-4524-bb9f-3ef2be727c39"
+      },
+      "execution_count": 163,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "328350"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 163
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict((i, i ** 2) for i in range(5))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "USAh3SjA7grL",
+        "outputId": "bb1b2d5b-1c39-4c13-b396-7d0cb96cf0a7"
+      },
+      "execution_count": 164,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{0: 0, 1: 1, 2: 4, 3: 9, 4: 16}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 164
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# itertools module\n",
+        "import itertools\n",
+        "def first_letter(x):\n",
+        "    return x[0]\n",
+        "names = [\"Alan\", \"Adam\", \"Wes\", \"Will\", \"Albert\", \"Steven\"]\n",
+        "for letter, names in itertools.groupby(names, first_letter):\n",
+        "    print(letter, list(names))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mAB4gYo67iLh",
+        "outputId": "27db8410-0287-4eb7-ee04-8cb13bbb1f18"
+      },
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A ['Alan', 'Adam']\n",
+            "W ['Wes', 'Will']\n",
+            "A ['Albert']\n",
+            "S ['Steven']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# errors and exception handling\n",
+        "# Started it before reviewing to question to see it is not required. but it was fun. :)\n",
+        "float(\"1.2345\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_qbSZ3Lm72JD",
+        "outputId": "7451dbcd-bb1c-4317-92b7-3aafb4702b08"
+      },
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.2345"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 167
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "float(\"something\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "id": "T9MFxvus8Caq",
+        "outputId": "3baf36de-03b7-40ea-aaf7-dd9ae2e2bfac"
+      },
+      "execution_count": 168,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "could not convert string to float: 'something'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-168-4117532930.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"something\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'something'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# set up function with try except\n",
+        "def attempt_float(x):\n",
+        "    try:\n",
+        "        return float(x)\n",
+        "    except:\n",
+        "        return x"
+      ],
+      "metadata": {
+        "id": "_D2CFAe18FPS"
+      },
+      "execution_count": 169,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attempt_float(\"1.2345\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LG0Y5TNS8LZS",
+        "outputId": "fd43785d-b590-4ff7-dd5a-c28c0fab488b"
+      },
+      "execution_count": 170,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.2345"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 170
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attempt_float(\"something\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "39ZZ6kNR8NvV",
+        "outputId": "394cf4e3-87b3-4fb3-e4d1-d5173745a13f"
+      },
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'something'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 171
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# float error\n",
+        "float((1, 2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "id": "nKANixZK8PNR",
+        "outputId": "d0d2f334-baae-477b-f6b6-788ed47bfc63"
+      },
+      "execution_count": 172,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "float() argument must be a string or a real number, not 'tuple'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-172-1061708882.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: float() argument must be a string or a real number, not 'tuple'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# suppress error\n",
+        "def attempt_float(x):\n",
+        "    try:\n",
+        "        return float(x)\n",
+        "    except ValueError:\n",
+        "        return x"
+      ],
+      "metadata": {
+        "id": "ZW3xvJO68Ys2"
+      },
+      "execution_count": 173,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "attempt_float((1, 2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 263
+        },
+        "id": "Y9F1AGt-8hNn",
+        "outputId": "2b5352b8-3415-4f7e-e5ac-5ae85d5c9bd0"
+      },
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "float() argument must be a string or a real number, not 'tuple'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-174-3151118377.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mattempt_float\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-173-1481029259.py\u001b[0m in \u001b[0;36mattempt_float\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mattempt_float\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: float() argument must be a string or a real number, not 'tuple'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# try to catch multiple exception types\n",
+        "def attempt_float(x):\n",
+        "    try:\n",
+        "        return float(x)\n",
+        "    except (TypeError, ValueError):\n",
+        "        return x"
+      ],
+      "metadata": {
+        "id": "33C2CFt58iqh"
+      },
+      "execution_count": 175,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# just trying not in book\n",
+        "attempt_float((1, 2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K7D3z-T08rLB",
+        "outputId": "0ca2812f-7f75-4f63-ec31-bd711738bb30"
+      },
+      "execution_count": 176,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 176
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# didn't do the file open since partial code"
+      ],
+      "metadata": {
+        "id": "cUg3sER38xQA"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
