--- a/Lab_2_Assignment_WI24.ipynb
+++ b/Lab_2_Assignment_WI24.ipynb
@@ -6510,15 +6510,556 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 114,
       "metadata": {
         "scrolled": true,
-        "id": "sk_kfTxqSvET"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sk_kfTxqSvET",
+        "outputId": "8232d70f-fb42-4226-9321-275a471117ca"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-0.62633052,  0.02676991,  0.00945842,  0.08273955],\n",
+              "       [ 0.9356191 , -0.61385713, -1.33517942,  0.18618732],\n",
+              "       [-0.22945821,  2.40291709,  0.66990302, -0.40878451],\n",
+              "       [-0.80754947, -1.24256094,  0.40042494, -1.45929227]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 114
+        }
+      ],
       "source": [
-        "# Type code below"
+        "# Type code below\n",
+        "# Pseudorandom Number Generation\n",
+        "samples = np.random.standard_normal(size=(4, 4))\n",
+        "samples"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from random import normalvariate"
+      ],
+      "metadata": {
+        "id": "b3GqJmIaY2Ld"
+      },
+      "execution_count": 115,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "N = 1_000_000\n",
+        "%timeit samples = [normalvariate(0, 1) for _ in range(N)]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nlEtrPEsY5-w",
+        "outputId": "d2362a52-90bb-46ad-a3d9-22fb37fe88f1"
+      },
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "653 ms ± 13.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " %timeit np.random.standard_normal(N)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hf2uu70YZGhC",
+        "outputId": "3747c36d-627d-4228-eae0-d1ce56b86655"
+      },
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "31.5 ms ± 5.68 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rng = np.random.default_rng(seed=12345)"
+      ],
+      "metadata": {
+        "id": "zM7O27oLZLTs"
+      },
+      "execution_count": 118,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = rng.standard_normal((2, 3))\n"
+      ],
+      "metadata": {
+        "id": "yjKWcp60ZP1f"
+      },
+      "execution_count": 119,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(rng)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eTCrCVacZWFj",
+        "outputId": "478ee9e5-8528-4621-dc1d-8f1f00aa2c64"
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.random._generator.Generator"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 120
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# didn't see to check data so doing it here\n",
+        "data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rlYAiqUQZYdF",
+        "outputId": "4094b635-77e6-495d-8353-9725f53776e3"
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-1.42382504,  1.26372846, -0.87066174],\n",
+              "       [-0.25917323, -0.07534331, -0.74088465]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 121
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Universal functions: Fast Element-wise array functions\n",
+        "arr = np.arange(10)\n",
+        "arr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WZvDATKhZc5D",
+        "outputId": "abb0236d-b391-4f08-cd4f-3167a60eb8a2"
+      },
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 122
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.sqrt(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iCe9UUoiZm-d",
+        "outputId": "6e5039bd-3d8a-4faf-b27d-9fd06c9769c3"
+      },
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.        , 1.        , 1.41421356, 1.73205081, 2.        ,\n",
+              "       2.23606798, 2.44948974, 2.64575131, 2.82842712, 3.        ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 123
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.exp(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WeexEbssZow4",
+        "outputId": "a9c7ecea-a59a-4fb0-96aa-27ad6d30e999"
+      },
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.00000000e+00, 2.71828183e+00, 7.38905610e+00, 2.00855369e+01,\n",
+              "       5.45981500e+01, 1.48413159e+02, 4.03428793e+02, 1.09663316e+03,\n",
+              "       2.98095799e+03, 8.10308393e+03])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 124
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = rng.standard_normal(8)\n",
+        "y = rng.standard_normal(8)"
+      ],
+      "metadata": {
+        "id": "1_Wy8m-FZrlx"
+      },
+      "execution_count": 125,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "weevzqIOZvRb",
+        "outputId": "8492192e-0800-48d1-ef49-a36f7572fe1f"
+      },
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-1.3677927 ,  0.6488928 ,  0.36105811, -1.95286306,  2.34740965,\n",
+              "        0.96849691, -0.75938718,  0.90219827])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1jmVPH_HZwKv",
+        "outputId": "32efca2f-3549-44c5-9d83-5b98a5811eff"
+      },
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-0.46695317, -0.06068952,  0.78884434, -1.25666813,  0.57585751,\n",
+              "        1.39897899,  1.32229806, -0.29969852])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.maximum(x, y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KdFyrtsYZxUz",
+        "outputId": "0737ebc1-d588-47a3-925d-fb7dc46db84f"
+      },
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-0.46695317,  0.6488928 ,  0.78884434, -1.25666813,  2.34740965,\n",
+              "        1.39897899,  1.32229806,  0.90219827])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 128
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = rng.standard_normal(7) * 5\n",
+        "arr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y92pkZeLZywa",
+        "outputId": "96b24efd-08b9-4d63-9805-0a1ca4d15c5c"
+      },
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 4.51459671, -8.10791367, -0.7909463 ,  2.24741966, -6.71800536,\n",
+              "       -0.40843795,  8.62369966])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 129
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "remainder , whole_part = np.modf(arr)\n",
+        "remainder"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HfVwpyjRZ9w-",
+        "outputId": "2886f4b8-b7d2-4641-f5a6-abe971ed813d"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0.51459671, -0.10791367, -0.7909463 ,  0.24741966, -0.71800536,\n",
+              "       -0.40843795,  0.62369966])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "whole_part"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dc-oIA2jaDaj",
+        "outputId": "38c3a7c7-7bb7-4e9b-e797-53ba758a451d"
+      },
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 4., -8., -0.,  2., -6., -0.,  8.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 131
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QtfW93tgaFwF",
+        "outputId": "1f534d34-f916-48e8-9677-7e8d3ff4e82c"
+      },
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 4.51459671, -8.10791367, -0.7909463 ,  2.24741966, -6.71800536,\n",
+              "       -0.40843795,  8.62369966])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 132
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "out = np.zeros_like(arr)"
+      ],
+      "metadata": {
+        "id": "7cdSZ2LlaH7p"
+      },
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.add(arr, 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UXTfm2XgaKe8",
+        "outputId": "0c5abcc2-dbee-4881-aedc-9bf705dcdbec"
+      },
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 5.51459671, -7.10791367,  0.2090537 ,  3.24741966, -5.71800536,\n",
+              "        0.59156205,  9.62369966])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 134
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.add(arr, 1, out=out)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qH3qIxWGaMTA",
+        "outputId": "88abd7b5-4310-4a64-be35-9ff077ebeb59"
+      },
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 5.51459671, -7.10791367,  0.2090537 ,  3.24741966, -5.71800536,\n",
+              "        0.59156205,  9.62369966])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 135
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "out"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rJR3V1PRaOK8",
+        "outputId": "a4f9cd9b-fdc8-48fd-dcfa-c77b0a0f35c6"
+      },
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 5.51459671, -7.10791367,  0.2090537 ,  3.24741966, -5.71800536,\n",
+              "        0.59156205,  9.62369966])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 136
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "KrWppCWJaPDs"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
