--- a/Comprehensive_Assignment_2_Tartamella.ipynb
+++ b/Comprehensive_Assignment_2_Tartamella.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrkl0miXtj9XKXpeuYFTpA",
+      "authorship_tag": "ABX9TyP/K8BkRkGlTVWGloYmv2r1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9620,6 +9620,17 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "aWZiCgsVtzgY"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# data file was uploaded at the begining\n",
         "# get the data and take a look\n",
         "data = pd.read_csv('adult.data.csv')\n",
@@ -10611,17 +10622,17 @@
       "source": [
         "# 10 10. Count the average time of work (hours-per-week) those who earning a\n",
         "#little and a lot (salary) for each country (native-country).\n",
-        "for (country, salary), sub_df in data.groupby(['native-country', 'salary']):\n",
-        "    print(country, salary, round(sub_df['hours-per-week'].mean(), 2))"
+        "for (country, salary), sub in data.groupby(['native-country', 'salary']):\n",
+        "    print(country, salary, round(sub['hours-per-week'].mean(), 2))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pVxG8b_hq4Nx",
-        "outputId": "b1f098fa-bf6b-4e50-cc42-ff04194af57a"
+        "outputId": "e6bc27e6-5398-4352-f918-9a216032ffa8"
       },
-      "execution_count": 64,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
