--- a/Lab_6_Assignment.ipynb
+++ b/Lab_6_Assignment.ipynb
@@ -613,13 +613,350 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "Y-YcTcT1S6a4"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 240
+        },
+        "id": "Y-YcTcT1S6a4",
+        "outputId": "9d3c9d63-028f-42f2-ddf9-432d55b8c2ea"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2000-01-01    0\n",
+              "2000-01-02    1\n",
+              "2000-01-02    2\n",
+              "2000-01-02    3\n",
+              "2000-01-03    4\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2000-01-01</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-02</th>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-02</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-02</th>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-03</th>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ],
       "source": [
-        "# Insert commenting and code in this cell."
+        "# Insert commenting and code in this cell.\n",
+        "# Time Series with Duplicate Indices\n",
+        "dates = pd.DatetimeIndex(['1/1/2000', '1/2/2000', '1/2/2000',\n",
+        "                          '1/2/2000', '1/3/2000'])\n",
+        "dup_ts = pd.Series(np.arange(5), index=dates)\n",
+        "dup_ts"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# is unique\n",
+        "dup_ts.index.is_unique"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bjuunRMk5opr",
+        "outputId": "9468ee13-b00f-445f-df96-24eba2c94e1c"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# dups ?\n",
+        "dup_ts[\"2000-01-03\"]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8o6SQObm5wey",
+        "outputId": "14850612-4dc5-444e-f496-083f6cee4939"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# dups?\n",
+        "dup_ts[\"2000-01-02\"]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        },
+        "id": "qCBjLHgE54aS",
+        "outputId": "ac7429c5-68f4-40cb-b36b-cfdd2abf66f4"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2000-01-02    1\n",
+              "2000-01-02    2\n",
+              "2000-01-02    3\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2000-01-02</th>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-02</th>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-02</th>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# groupby\n",
+        "grouped = dup_ts.groupby(level=0)\n",
+        "grouped.mean()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        },
+        "id": "HMk7RCu654Wp",
+        "outputId": "dfebb29d-e98c-4009-bb3c-2d1ddc91c190"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2000-01-01    0.0\n",
+              "2000-01-02    2.0\n",
+              "2000-01-03    4.0\n",
+              "dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2000-01-01</th>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-02</th>\n",
+              "      <td>2.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-03</th>\n",
+              "      <td>4.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "grouped.count()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        },
+        "id": "D1cMvw0O54Jm",
+        "outputId": "059335b0-42c9-49a8-f75c-93e5eab168e9"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2000-01-01    1\n",
+              "2000-01-02    3\n",
+              "2000-01-03    1\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2000-01-01</th>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-02</th>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-03</th>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
       ]
     },
     {
@@ -642,13 +979,204 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "q4QUDeRrS6a4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q4QUDeRrS6a4",
+        "outputId": "160de70e-1ee3-48f2-b94e-0dedd4a1748e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatetimeIndex(['2012-04-01', '2012-04-02', '2012-04-03', '2012-04-04',\n",
+              "               '2012-04-05', '2012-04-06', '2012-04-07', '2012-04-08',\n",
+              "               '2012-04-09', '2012-04-10', '2012-04-11', '2012-04-12',\n",
+              "               '2012-04-13', '2012-04-14', '2012-04-15', '2012-04-16',\n",
+              "               '2012-04-17', '2012-04-18', '2012-04-19', '2012-04-20',\n",
+              "               '2012-04-21', '2012-04-22', '2012-04-23', '2012-04-24',\n",
+              "               '2012-04-25', '2012-04-26', '2012-04-27', '2012-04-28',\n",
+              "               '2012-04-29', '2012-04-30', '2012-05-01', '2012-05-02',\n",
+              "               '2012-05-03', '2012-05-04', '2012-05-05', '2012-05-06',\n",
+              "               '2012-05-07', '2012-05-08', '2012-05-09', '2012-05-10',\n",
+              "               '2012-05-11', '2012-05-12', '2012-05-13', '2012-05-14',\n",
+              "               '2012-05-15', '2012-05-16', '2012-05-17', '2012-05-18',\n",
+              "               '2012-05-19', '2012-05-20', '2012-05-21', '2012-05-22',\n",
+              "               '2012-05-23', '2012-05-24', '2012-05-25', '2012-05-26',\n",
+              "               '2012-05-27', '2012-05-28', '2012-05-29', '2012-05-30',\n",
+              "               '2012-05-31', '2012-06-01'],\n",
+              "              dtype='datetime64[ns]', freq='D')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ],
       "source": [
-        "# Insert commenting and code in this cell."
+        "# Insert commenting and code in this cell.\n",
+        "# Generating Date Ranges\n",
+        "index = pd.date_range(\"4/1/2012\", \"6/1/2012\")\n",
+        "index"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.date_range(start=\"2012-04-01\", periods=20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t4kpBhEn6h7j",
+        "outputId": "be3b4adc-5129-4998-9c47-c5586721b593"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatetimeIndex(['2012-04-01', '2012-04-02', '2012-04-03', '2012-04-04',\n",
+              "               '2012-04-05', '2012-04-06', '2012-04-07', '2012-04-08',\n",
+              "               '2012-04-09', '2012-04-10', '2012-04-11', '2012-04-12',\n",
+              "               '2012-04-13', '2012-04-14', '2012-04-15', '2012-04-16',\n",
+              "               '2012-04-17', '2012-04-18', '2012-04-19', '2012-04-20'],\n",
+              "              dtype='datetime64[ns]', freq='D')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.date_range(end=\"2012-06-01\", periods=20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sQkmKPF06m3x",
+        "outputId": "67d01291-a81f-4a7c-bb9d-be8203cd9109"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatetimeIndex(['2012-05-13', '2012-05-14', '2012-05-15', '2012-05-16',\n",
+              "               '2012-05-17', '2012-05-18', '2012-05-19', '2012-05-20',\n",
+              "               '2012-05-21', '2012-05-22', '2012-05-23', '2012-05-24',\n",
+              "               '2012-05-25', '2012-05-26', '2012-05-27', '2012-05-28',\n",
+              "               '2012-05-29', '2012-05-30', '2012-05-31', '2012-06-01'],\n",
+              "              dtype='datetime64[ns]', freq='D')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.date_range(\"2000-01-01\", \"2000-12-01\", freq=\"BM\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LmrEl-XX6oUP",
+        "outputId": "cafa8637-7921-49ba-c582-94604072aa1b"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-3742551278.py:1: FutureWarning: 'BM' is deprecated and will be removed in a future version, please use 'BME' instead.\n",
+            "  pd.date_range(\"2000-01-01\", \"2000-12-01\", freq=\"BM\")\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatetimeIndex(['2000-01-31', '2000-02-29', '2000-03-31', '2000-04-28',\n",
+              "               '2000-05-31', '2000-06-30', '2000-07-31', '2000-08-31',\n",
+              "               '2000-09-29', '2000-10-31', '2000-11-30'],\n",
+              "              dtype='datetime64[ns]', freq='BME')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.date_range(\"2012-05-02 12:56:31\", periods=5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tMMM2-6I6yrb",
+        "outputId": "0243cdd7-00b1-4fff-a5e3-568b5cf7dd60"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatetimeIndex(['2012-05-02 12:56:31', '2012-05-03 12:56:31',\n",
+              "               '2012-05-04 12:56:31', '2012-05-05 12:56:31',\n",
+              "               '2012-05-06 12:56:31'],\n",
+              "              dtype='datetime64[ns]', freq='D')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# normalized\n",
+        "pd.date_range(\"2012-05-02 12:56:31\", periods=5, normalize=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G0Zq3BoG6z0W",
+        "outputId": "47a08899-0ea8-470b-8e74-b198ddb346fe"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatetimeIndex(['2012-05-02', '2012-05-03', '2012-05-04', '2012-05-05',\n",
+              "               '2012-05-06'],\n",
+              "              dtype='datetime64[ns]', freq='D')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
       ]
     },
     {
